change delimiter character
